# taskmr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
docs/: how-to-develop.md
src/: lib.rs  main.rs
src/ddd/: component.rs  mod.rs
src/domain/: es_task.rs  mod.rs  task.rs
src/infra/: mod.rs
src/infra/sqlite/: es_task_repository.rs  mod.rs  task_repository.rs
src/presentation/: mod.rs
src/presentation/command/: cli.rs  mod.rs
src/presentation/commands/: cli.rs
src/presentation/printer/: mod.rs  table.rs
src/usecase/: add_es_task_usecase.rs  add_task_usecase.rs  close_es_task_usecase.rs  close_task_usecase.rs  edit_es_task_usecase.rs  edit_task_usecase.rs  error.rs  es_add_task_usecase.rs  es_close_task_usecase.rs  es_edit_task_usecase.rs  es_list_task_usecase.rs  es_repository.rs  list_es_task_usecase.rs  list_task_usecase.rs  mod.rs
