[package]
name = "taskmr"
version = "0.1.0"
authors = ["dondakeshimo <went.went.takkun135@gmail.com>"]
description = "Task ManageR for CLI"
edition = "2021"
license = "MIT"
repository = "https://github.com/dondakeshimo/taskmr/"
readme = "README.md"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
clap = { version = "3.1.6", features = ["derive"] }
tabwriter = "1"
anyhow = "1.0"
thiserror = "1.0"
dirs = "4.0"
