[package]
name = "taskmr"
version = "0.2.0"
authors = ["dondakeshimo <went.went.takkun135@gmail.com>"]
description = "Task ManageR for CLI"
edition = "2021"
license = "MIT"
repository = "https://github.com/dondakeshimo/taskmr/"
readme = "README.md"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
clap = { version = "4.0.4", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
tabwriter = "1"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
